force-app/main/default/objects/Doctor_Availability__c/Doctor_Availability__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Doctor Availability.</description>
    <label>Doctor Availability</label>
    <nameField>
        <displayFormat>AVL-{00000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Availability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>