force-app/main/default/objects/Doctor_Availability__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>