force-app/main/default/objects/Doctor_Availability__c/fields/Slot_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Slot_Capacity__c</fullName>
    <label>Slot Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>