force-app/main/default/objects/Doctor_Availability__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>